--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>meithreyi</title>
 </head>
 <body>
-    <img src="img/IMG_20230627_094053.jpg"width="200" height="200">
+    <img src="c:\Users\SG\Downloads\1696651843338.jpg"width="200" height="200">
     <br>
     <p><h1>NM ID: C54EC7D4BBF712980A748B2EEE802792</h1></p>
      <p><h1>Name: Meithreyi devi M</h1></p>
